fixes project tile on mobile

--- a/css/site.scss
+++ b/css/site.scss
@@ -222,8 +222,12 @@ span.italics {
 
 #projects h3 {
 	column-gap: 0px;
+	a {
+		display: contents;
+	}
 	a::before {
 		content: "\00A0";
+		display: contents;
 	}
 }
 
